Fix banner as img movie/tv detail credits, layout breakpoint

--- a/src/output.css
+++ b/src/output.css
@@ -640,10 +640,6 @@
   flex-direction: column;
 }
 
-.flex-col-reverse {
-  flex-direction: column-reverse;
-}
-
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -970,10 +966,6 @@
   padding-bottom: 0.75rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -1012,10 +1004,6 @@
 
 .pt-3 {
   padding-top: 0.75rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
 }
 
 .pt-8 {
@@ -2068,10 +2056,6 @@ youtube-player div:first-child {
     display: none;
   }
 
-  .sm\:w-\[460px\] {
-    width: 460px;
-  }
-
   .sm\:w-\[50\%\] {
     width: 50%;
   }
@@ -2117,18 +2101,6 @@ youtube-player div:first-child {
     align-items: flex-end;
   }
 
-  .sm\:space-x-2 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(0.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
-  .sm\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .sm\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-y-reverse: 0;
     margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
@@ -2145,11 +2117,6 @@ youtube-player div:first-child {
 
   .sm\:bg-transparent {
     background-color: transparent;
-  }
-
-  .sm\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
 
   .sm\:text-3xl {
@@ -2254,6 +2221,10 @@ youtube-player div:first-child {
     display: block;
   }
 
+  .lg\:flex {
+    display: flex;
+  }
+
   .lg\:hidden {
     display: none;
   }
@@ -2290,6 +2261,18 @@ youtube-player div:first-child {
     width: 80%;
   }
 
+  .lg\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
+  }
+
+  .lg\:w-\[700px\] {
+    width: 700px;
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -2312,6 +2295,16 @@ youtube-player div:first-child {
     margin-bottom: calc(2rem * var(--tw-space-y-reverse));
   }
 
+  .lg\:space-y-0 > :not([hidden]) ~ :not([hidden]) {
+    --tw-space-y-reverse: 0;
+    margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+    margin-bottom: calc(0px * var(--tw-space-y-reverse));
+  }
+
+  .lg\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
   .lg\:bg-transparent {
     background-color: transparent;
   }
@@ -2322,5 +2315,9 @@ youtube-player div:first-child {
 
   .lg\:p-8 {
     padding: 2rem;
+  }
+
+  .lg\:hover\:cursor-default:hover {
+    cursor: default;
   }
 }
